--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -92,7 +92,7 @@ junto com este programa.  Caso negativo, veja http://www.gnu.org/licenses/\n
     <string name="authors">Autores:</string>
     <string name="releaseDate">Lançado em:</string>
     <string name="tooManyHits">Muitos resultados encontrados. Exibindo apenas uma parte deles.</string>
-    <string name="downloading">Baixando...</string>
+    <string name="downloading">Baixando&#8230;</string>
     <string name="searching">Pesquisando...</string>
     <string name="pleaseWait">Por favor espere</string>
     <string name="TouchMode">Modo de Toque</string>
@@ -112,4 +112,6 @@ junto com este programa.  Caso negativo, veja http://www.gnu.org/licenses/\n
     <string name="download">Baixar</string>
     <string name="delete">Excluir</string>
     <string name="cancel">Cancelar</string>
+    <string name="First50K">Primeiros 50 KB do arquivo:</string>
+    <string name="GoToSite">Ir para o site</string>
 </resources>
