--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="useProxy">useHTTPProxy</string>
     <string name="useProxySummary">select to use HTTP proxy</string>
     <string name="useProxyTitle">Use HTTP Proxy</string>
-    <string name="about">"NDKmol - Molecular Viewer for Android  Please visit http://webglmol.sfjp.jp/ for the details and source codes. You can also get WebGL version there.        *** LICENSE NOTICE ***   NDKmol itself is licensed under GNU Lesser General Public License as follows.    However, PDB files included as examples are under DIFFERENT conditions.  Please consult http://www.rcsb.org/pdb/static.do?p=general_information/about_pdb/pdb_advisory.html    -------------    The structure used as an example is adapted from PDB, ID 2POR:   Structure of porin refined at 1.8 A resolution     Weiss, M.S.,  Schulz, G.E., J.Mol.Biol. 227: 493-509 (1992)   -------------    NDKmol - Molecular Viewer for Android         (C) Copyright 2011-2015, biochem_fan    This program is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more details.    You should have received a copy of the GNU Lesser General Public License along with this program.  If not, see http://www.gnu.org/licenses/        "</string>
+    <string name="about">"NDKmol – Molecular Viewer for Android  Please visit http://webglmol.sfjp.jp/ for the details and source codes. You can also get WebGL version there.        *** LICENSE NOTICE ***   NDKmol itself is licensed under GNU Lesser General Public License as follows.    However, PDB files included as examples are under DIFFERENT conditions.  Please consult http://www.rcsb.org/pdb/static.do?p=general_information/about_pdb/pdb_advisory.html    -------------    The structure used as an example is adapted from PDB, ID 2POR:   Structure of porin refined at 1.8 A resolution     Weiss, M.S.,  Schulz, G.E., J.Mol.Biol. 227: 493-509 (1992)   -------------    NDKmol - Molecular Viewer for Android         © Copyright 2011-2015, biochem_fan    This program is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more details.    You should have received a copy of the GNU Lesser General Public License along with this program.  If not, see http://www.gnu.org/licenses/        "</string>
     <string name="unknownFileType">Unknown file type. Only .pdb / .sdf / .mol files are supported.</string>
     <string name="Zoom">Zoom</string>
     <string name="Rotate">Rotate</string>
@@ -48,7 +48,7 @@
     <string name="searchButton">Search</string>
     <string name="PDBID">ID:</string>
     <string name="structureTitle">Title:</string>
-    <string name="blank"></string>
+    <string name="blank" translatable="false"></string>
     <string name="resolution">Resolution:</string>
     <string name="authors">Authors:</string>
     <string name="releaseDate">Released on:</string>
@@ -75,4 +75,5 @@
     <string name="cancel">Cancel</string>
     <string name="First50K">First 50 KB of the file:</string>
     <string name="GoToSite">Go to website</string>
+    <string name="make_screenshot">Make screenshot</string>
 </resources>
