--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -5,10 +5,8 @@
     <string name="preferencesTitle">設定</string>
     <string name="proxyHost">httpProxyHost</string>
     <string name="proxyHostTitle">HTTP プロキシ ホスト名</string>
-    <string name="proxyHostSummary"></string>
     <string name="proxyPortTitle">HTTP プロキシ ポート番号</string>
     <string name="proxyPort">httpProxyPort</string>
-    <string name="proxyPortSummary"></string>
     <string name="useProxy">useHTTPProxy</string>
     <string name="useProxySummary">HTTP プロキシを使用する</string>
     <string name="useProxyTitle">HTTP Proxy を使用</string>
@@ -85,7 +83,6 @@ along with this program.  If not, see http://www.gnu.org/licenses/\n
     <string name="searchButton">検索</string>
     <string name="PDBID">ID:</string>
     <string name="structureTitle">名称:</string>
-    <string name="blank"></string>
     <string name="resolution">分解能:</string>
     <string name="authors">著者:</string>
     <string name="releaseDate">公開日:</string>
@@ -112,5 +109,6 @@ along with this program.  If not, see http://www.gnu.org/licenses/\n
     <string name="cancel">中止</string>
     <string name="First50K">ファイルの最初の50 KB：</string>
     <string name="GoToSite">ウェブサイトに行く</string>
-    <string name="make_screenshot">Make screenshot</string>
+    <string name="make_screenshot">スクリーンショットを作成</string>
+    <string name="background">背景</string>
 </resources>
